--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,37 @@
 main {
   min-height: 85vh;
 }
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-modal {
+  background-color: #fff;
+  width: 80vw;
+  max-width: 400px;
+  border-radius: 20px;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+
+.custom-modal h4 {
+  margin-bottom: 10px;
+  line-height: 1.5;
+}
+.custom-modal .clear-btn,
+.custom-modal .confirm-btn {
+  margin-top: 1rem;
+}
+.btn-container {
+  display: flex;
+  justify-content: space-around;
+}
