--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 main {
   min-height: 85vh;
 }
-/* .modal-container {
+.custom-modal-container {
   position: fixed;
   top: 0;
   left: 0;
@@ -34,4 +34,4 @@ main {
 .btn-container {
   display: flex;
   justify-content: space-around;
-} */
+}
