--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&family=Roboto&display=swap');
+
+body {
+  font-family: 'Bai Jamjuree', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
 main {
   min-height: 85vh;
   position: relative;
