--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,18 @@ main {
   box-shadow: none;
   color: #999;
 }
+
+.customCard {
+  transition: all 0.3s ease-in;
+}
+
+.customCard:hover {
+  box-shadow: -2px 6px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -2px 6px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -2px 6px 5px 0px rgba(0, 0, 0, 0.75);
+}
+.message-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
